--- a/style.css
+++ b/style.css
@@ -38,4 +38,8 @@ body{
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
 }
+#topcontrol img{
+    height: 50px;
+    width: 50px;
+}
 
